--- a/style.css
+++ b/style.css
@@ -8,7 +8,8 @@ body {
 body * :after :before {
   padding: 0;
   margin: 0;
-  box-sizing: inherit;
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
 }
 body .wrapper-container {
   display: grid;
@@ -49,6 +50,4 @@ body .wrapper-container .wrapper button#btn {
   border-radius: 0.3125rem;
   cursor: pointer;
   margin: 0 auto;
-}
-
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
